[package]
name = "enclave"
version = "0.1.0"
authors = ["John Barker <john@smartcontract.com>"]

[lib]
name = "enclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
serde = { path = "/opt/rust-sgx-sdk/third_party/serde-rs/serde/serde", default-features = false }
serde_derive = { path = "/opt/rust-sgx-sdk/third_party/serde-rs/serde/serde_derive" }
serde_json = { path = "/opt/rust-sgx-sdk/third_party/serde-rs/json", default-features = false }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { path = "/opt/rust-sgx-sdk/sgx_tstd" }
sgx_types = { path = "/opt/rust-sgx-sdk/sgx_types" }
